--- a/css/styles.css
+++ b/css/styles.css
@@ -1,368 +1,431 @@
-html{
-    box-sizing: border-box;
-    font-size: 62.5%; /*1 rem = 10px*/
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; /*1 rem = 10px*/
 }
-*,*::before, *::after{
-    box-sizing: inherit;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
-body{
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.6rem;
-    line-height: 1.5;
+body {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
 /*globales*/
-h1, 
-h2, 
-h3{
-    font-family: 'Playfair Display', serif;
-    margin: 0 0 2rem 0;
+h1,
+h2,
+h3 {
+  font-family: "Playfair Display", serif;
+  margin: 0 0 2rem 0;
 }
-h1{
+h1 {
+  font-size: 4rem;
+}
+@media (min-width: 768px) {
+  h1 {
+    font-size: 5rem;
+  }
+}
+h2 {
+  font-size: 3.2rem;
+}
+@media (min-width: 768px) {
+  h2 {
     font-size: 4rem;
+  }
 }
-@media (min-width: 768px) { 
-    h1{
-        font-size: 5rem;
-    }
+h3 {
+  font-size: 2.4rem;
 }
-h2{
-    font-size: 3.2rem;
+@media (min-width: 768px) {
+  h3 {
+    font-size: 3rem;
+  }
 }
-@media (min-width: 768px) { 
-    h2{
-        font-size: 4rem;
-    }
+a {
+  text-decoration: none;
+  color: #000;
 }
-h3{
-    font-size: 2.4rem;
+.contenedor {
+  max-width: 120rem;
+  margin: 0 auto;
 }
-@media (min-width: 768px) { 
-    h3{
-        font-size: 3rem;
-    }
-}
-a{
-    text-decoration: none;
-    color: #000;
-}
-.contenedor{
-    max-width: 120rem;
-    margin:0 auto;
-}
-img{
-    max-width: 100%;
-    display: block;
+img {
+  max-width: 100%;
+  display: block;
 }
 
-.btn{
-    background-color: #8cbc00;
-    display: block;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 900;
-    padding: 1rem;
-    transition: background-color .3s ease-out;
-    text-align: center;
-    border: none;
+.btn {
+  background-color: #8cbc00;
+  display: block;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 900;
+  padding: 1rem;
+  transition: background-color 0.3s ease-out;
+  text-align: center;
+  border: none;
 }
-.btn:hover{
-    background-color: #769c02;
-    cursor: pointer;
+.btn:hover {
+  background-color: #769c02;
+  cursor: pointer;
 }
 
 /*utilidades*/
-.text-center{
-    text-align: center;
+.text-center {
+  text-align: center;
 }
-.max-width-30{
-    max-width: 30rem;
+.max-width-30 {
+  max-width: 30rem;
 }
 
 /*header y  navegacion*/
-
-.nombre-sitio{
-    margin-top: 5rem;
-    text-align: center;
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 90%;
+  max-width: 100%;
+  margin: 0 auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-.nombre-sitio span{
-    color: #037bc0;
+@media (min-width: 768px) {
+  .header {
+    flex-direction: row;
+  }
 }
-.contenedor-navegacion{
-    border-top: .1rem solid #e1e1e1;
+.carrito {
+  position: relative;
 }
-.nav-principal{
-    padding: 2rem 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.vaciar {
+  width: 100%;
+  padding: 1rem;
+  background-color: #037bc0;
+  color: #fff;
+  font-weight: bold;
+  border: 0;
 }
-@media (min-width: 768px) { 
-    .nav-principal{
-        justify-content: space-between;
-        flex-direction: row;
-    }
+.img-cart {
+  width: 50px;
+  cursor: pointer;
 }
-.hero{
-    background-image: url(../img/principal.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 25rem;   
+.contenedor-carrito {
+  background-color: #fff;
+  width: 30rem;
+  position: absolute;
+  top: 20;
+  z-index: 1;
+  right: 0;
+  padding: 2rem;
+  display: none;
 }
-@media (min-width: 768px) { 
-    .hero{
-        height: 55rem;
-    }
+.flex-x {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price {
+  margin: 0;
+  font-weight: bold;
+}
+.nombre-sitio {
+  text-align: center;
+  margin: 0;
+}
+.nombre-sitio span {
+  color: #037bc0;
+}
+.contenedor-navegacion {
+  border-top: 0.1rem solid #e1e1e1;
+}
+.nav-principal {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+}
+@media (min-width: 768px) {
+  .nav-principal {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+}
+.hero {
+  background-image: url(../img/principal.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 25rem;
+}
+@media (min-width: 768px) {
+  .hero {
+    height: 55rem;
+  }
 }
 
 /*listado-categorias*/
-.categorias{
-    padding: 5rem 0;
+.categorias {
+  padding: 5rem 0;
 }
-.categoria{
-    margin-bottom: 2rem;
+.categoria {
+  margin-bottom: 2rem;
 }
-@media (min-width: 768px) { 
-    .categoria{
-        margin-bottom: 0;
-    }
+@media (min-width: 768px) {
+  .categoria {
+    margin-bottom: 0;
+  }
 }
-.categoria img{
-    width: 100%;
+.categoria img {
+  width: 100%;
 }
-.categoria a{
-    display: block;
-    text-align: center;
-    padding: 2rem;
-    font-size: 2rem;
+.categoria a {
+  display: block;
+  text-align: center;
+  padding: 2rem;
+  font-size: 2rem;
 }
-.categoria a:hover{
-    background-color: #037bc0;
-    color: #fff;
-    border-bottom-right-radius: 1rem;
+.categoria a:hover {
+  background-color: #037bc0;
+  color: #fff;
+  border-bottom-right-radius: 1rem;
 }
-@media (min-width: 768px) { 
-    .listado-categorias{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-    }    
+@media (min-width: 768px) {
+  .listado-categorias {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
 
 /*bloque nsotros*/
-.sobre-nosotros{
-    background-image: linear-gradient(to bottom, transparent 50%, #037bc0 50%, #037bc0 100%), url(../img/nosotros.jpg);
-    padding: 10rem 0;
-    background-position: center, top left;
-    background-repeat: no-repeat;
-    background-size: 100%, 70rem;
+.sobre-nosotros {
+  background-image: linear-gradient(
+      to bottom,
+      transparent 50%,
+      #037bc0 50%,
+      #037bc0 100%
+    ),
+    url(../img/nosotros.jpg);
+  padding: 10rem 0;
+  background-position: center, top left;
+  background-repeat: no-repeat;
+  background-size: 100%, 70rem;
 }
 
-@media (min-width: 768px) { 
-    .sobre-nosotros{
-        background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url(../img/nosotros.jpg);
-        background-position: left center;
-        padding: 10rem 0;
-        background-size: 100%, 160rem;
-    }
+@media (min-width: 768px) {
+  .sobre-nosotros {
+    background-image: linear-gradient(
+        to right,
+        transparent 50%,
+        #037bc0 50%,
+        #037bc0 100%
+      ),
+      url(../img/nosotros.jpg);
+    background-position: left center;
+    padding: 10rem 0;
+    background-size: 100%, 160rem;
+  }
 }
-.sobre-nosotros-grid{
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
+.sobre-nosotros-grid {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
 }
-@media (min-width: 768px) { 
-    .sobre-nosotros-grid{
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: unset;
-        column-gap: 10rem;
-    }
+@media (min-width: 768px) {
+  .sobre-nosotros-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: unset;
+    column-gap: 10rem;
+  }
 }
-.texto-nosotros{
-    grid-row: 2 / 3;
-    color: #fff;
-    padding: 5rem;
+.texto-nosotros {
+  grid-row: 2 / 3;
+  color: #fff;
+  padding: 5rem;
 }
-@media (min-width: 768px) { 
-    .texto-nosotros{
-        grid-column: 2 / 3;
-    }
+@media (min-width: 768px) {
+  .texto-nosotros {
+    grid-column: 2 / 3;
+  }
 }
 /*listado de productos*/
-.contenido-principal{
-    padding-top: 5rem;
+.contenido-principal {
+  padding-top: 5rem;
 }
-@media (min-width: 768px) { 
-    .listado-productos{
-        display: grid;
-        grid-template-columns: repeat(6,1fr);
-        gap: 2rem;
-    }
-    .producto:nth-child(1){
-        grid-column: 1 / 7;
-        display: grid;
-        grid-template-columns: 3fr 1fr;
-    }
-    .producto:nth-child(1) img{
-        height: 43rem;
-        width: 100%;
-        object-fit: cover;
-    }
-    .producto:nth-child(2){
-        grid-column: 1 / 4;
-    }
-    .producto:nth-child(2) img{
-        height: 30rem;
-        width: 100%;
-        object-fit: cover;
-    }
-    .producto:nth-child(3){
-        grid-column: 4 / 7;
-    }
-    .producto:nth-child(3) img{
-        height: 30rem;
-        width: 100%;
-        object-fit: cover;
-    }
-    .producto:nth-child(4){
-        grid-column: 1 / 3;
-    }
-    .producto:nth-child(5){
-        grid-column: 3 / 5;
-    }
-    .producto:nth-child(6){
-        grid-column: 5 / 7;
-    }
-}
-
-.producto{
-    background-color: #037bc0;
-    margin-bottom: 2rem;
-}
-.texto-producto{
-    text-align: center;
-    color: #fff;
-    padding: 2rem;
-}
-.texto-producto h3{
-    margin: 0;
-}
-.texto-producto p{
-    margin: 1 1 .5rem 0;
-}
-.texto-producto .precio{
-    font-size: 2.8rem;
-    font-weight: 900;
+@media (min-width: 768px) {
+  .listado-productos {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 2rem;
+  }
+  .producto:nth-child(1) {
+    grid-column: 1 / 7;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+  }
+  .producto:nth-child(1) img {
+    height: 43rem;
+    width: 100%;
+    object-fit: cover;
+  }
+  .producto:nth-child(2) {
+    grid-column: 1 / 4;
+  }
+  .producto:nth-child(2) img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+  }
+  .producto:nth-child(3) {
+    grid-column: 4 / 7;
+  }
+  .producto:nth-child(3) img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+  }
+  .producto:nth-child(4) {
+    grid-column: 1 / 3;
+  }
+  .producto:nth-child(5) {
+    grid-column: 3 / 5;
+  }
+  .producto:nth-child(6) {
+    grid-column: 5 / 7;
+  }
 }
 
+.producto {
+  background-color: #037bc0;
+  margin-bottom: 2rem;
+}
+.texto-producto {
+  text-align: center;
+  color: #fff;
+  padding: 2rem;
+}
+.texto-producto h3 {
+  margin: 0;
+}
+.texto-producto p {
+  margin: 1 1 0.5rem 0;
+}
+.texto-producto .precio {
+  font-size: 2.8rem;
+  font-weight: 900;
+}
 
 /*footer*/
-.site-footer{
-    border-top: .1rem solid #e1e1e1;
-    margin-top: 5rem;
-    padding-top: 5rem;
+.site-footer {
+  border-top: 0.1rem solid #e1e1e1;
+  margin-top: 5rem;
+  padding-top: 5rem;
 }
-.site-footer h3{
-    margin-bottom: .5rem;
+.site-footer h3 {
+  margin-bottom: 0.5rem;
 }
-.footer-grid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+.footer-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
 }
-.navegacion-menu a{
-    display: block;
-    padding: .5rem 0;
+.navegacion-menu a {
+  display: block;
+  padding: 0.5rem 0;
 }
-.copyright{
-    margin-top: 5rem;
-    text-align: center;
+.copyright {
+  margin-top: 5rem;
+  text-align: center;
 }
 
 /**nosotros**/
-.contenido-nosotros{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax( 25rem, 1fr));
-    column-gap: 4rem;
+.contenido-nosotros {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  column-gap: 4rem;
 }
-.informacion-nosotros{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.informacion-nosotros {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /*blog*/
-.contenedor-blog{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 4rem;
+.contenedor-blog {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  column-gap: 4rem;
 }
-.entrada{
-    border-bottom: 2px solid #e1e1e1;
-    padding-bottom: 4rem;
-    margin-bottom: 2rem;
+.entrada {
+  border-bottom: 2px solid #e1e1e1;
+  padding-bottom: 4rem;
+  margin-bottom: 2rem;
 }
-.entrada:last-of-type{
-    border: none;
+.entrada:last-of-type {
+  border: none;
 }
-.entrada-meta{
-    display: flex;
-    justify-content: space-between;
+.entrada-meta {
+  display: flex;
+  justify-content: space-between;
 }
-.entrada-meta p{
-    font-weight: 900;
+.entrada-meta p {
+  font-weight: 900;
 }
-.entrada-meta span{
-    color: #037bc0;
+.entrada-meta span {
+  color: #037bc0;
 }
-.contenido-entrada-blog{
-    width: 60rem;
-    margin: 0 auto;
+.contenido-entrada-blog {
+  width: 60rem;
+  margin: 0 auto;
 }
 /*galeria*/
-.galeria{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+.galeria {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
 }
-.galeria img{
-    width: 40rem;
-    height: 40rem;
-    object-fit: cover;
+.galeria img {
+  width: 40rem;
+  height: 40rem;
+  object-fit: cover;
 }
 
 /*formulario*/
-.formulario{
-    max-width: 60rem;
-    margin: 0 auto;
+.formulario {
+  max-width: 60rem;
+  margin: 0 auto;
 }
-.formulario fieldset{
-    border: 1px solid black;
-    margin-bottom: 2rem;
+.formulario fieldset {
+  border: 1px solid black;
+  margin-bottom: 2rem;
 }
-.formulario legend{
-    background-color: #005485;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 900;
-    padding: 1rem;
-    margin-bottom: 4rem;
+.formulario legend {
+  background-color: #005485;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 900;
+  padding: 1rem;
+  margin-bottom: 4rem;
 }
 .campo {
-    display: flex;
-    margin-bottom: 2rem;
+  display: flex;
+  margin-bottom: 2rem;
 }
-.campo label{
-    flex-basis: 10rem;
+.campo label {
+  flex-basis: 10rem;
 }
 .campo input:not([type="radio"]),
 .campo textarea,
-.campo select{
-    flex: 1;
-    border: 1px solid #e1e1e1;
-    padding: 1rem;
+.campo select {
+  flex: 1;
+  border: 1px solid #e1e1e1;
+  padding: 1rem;
 }
